--- a/Week_02/(0321)WEB/css/box.html
+++ b/Week_02/(0321)WEB/css/box.html
@@ -8,20 +8,15 @@
                 width:100px;
                 height:100px;
             }
-            a{
-
-                display: inline;
-            }
         </style>
     </head>
     <body>
         <!-- 
-        block level element=>h1
-        inline element=>a,img
+            block level element => h1
+            inline element => a, img
          -->
-
         <h1>WEB</h1>
         <h1>WEB</h1>
-        Lorem ipsum, dolor sit amet consectetur <a href="http://w3c.org">adipisicing</a> elit. Fugit, labore. Exercitationem, autem quibusdam. Nostrum consectetur, cumque sequi rem quas, modi, ipsam in iure illo voluptatum assumenda quis error quo suscipit.
+        Lorem ipsum, dolor sit amet consectetur <a href="http://w3c.org">adipisicing</a> elit. Ab, quaerat. Consequatur accusantium non saepe ullam veritatis repellendus ex nesciunt harum, sed ducimus illum repellat rem quasi velit beatae unde esse.
     </body>
 </html>
