--- a/Week_02/(0321)WEB/css/grid.html
+++ b/Week_02/(0321)WEB/css/grid.html
@@ -1,23 +1,25 @@
 <html>
     <head>
-    <style>
-        div{
-            border:10px solid red;
-            margin:5px;
-        }
-        #container{
-            display:grid;
-            grid-template-columns: 100px 1fr 1fr;
-        }
-    </style>
+        <style>
+            div{
+                border:10px solid red;
+                margin:5px;
+            }
+            #container{
+                display:grid;
+                grid-template-columns:100fr 200fr 100fr;
+            }
+        </style>
     </head>
     <body>
         <div>HEADER</div>
-    <div id="container">
-        <div>LEFT</div>
-        <div>CENTER</div>
-        <div>RIGHT</div>
-    </div>
+
+        <div id="container">
+            <div>LEFT</div>
+            <div>CENTER</div>
+            <div>RIGHT</div>
+        </div>
+        
         <div>BOTTOM</div>
     </body>
 </html>
