--- a/Week_02/(0321)WEB/javascipt/loop.html
+++ b/Week_02/(0321)WEB/javascipt/loop.html
@@ -36,5 +36,14 @@
                 console.log('i=>','<li>'+topics[i]+'</li>');
             }
         </script>
+
+        <script>
+            let topic=['html','css','javascript'];
+            for(let i=0; i<topic.length;i++){
+                console.log(topic[i]);
+                // document.write('<li>'+topic[i]+'</li>');
+                document.write(`<li>${topic[i]}</li>`);
+            }
+        </script>
     </body>
 </html>
