--- a/Week_03/Web/review6.html
+++ b/Week_03/Web/review6.html
@@ -1,7 +1,16 @@
-<!Doctype html>
+<!doctype html>
 <html>
     <head>
         <title>WEB</title>
+        <style>
+            h1{
+                border-bottom: 10px black solid;
+                padding:10px;
+            }
+            h1>a{
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
         <h1><a href="index.html">WEB</a></h1>
@@ -11,6 +20,6 @@
             <li><a href="3.html">javascript</a></li>
         </ol>
         <h2>Welcome</h2>
-        Hello,WEB
+        Hello, WEB
     </body>
 </html>
